--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
           predicates:
             - Path=/api/ratings/**
 
+        - id: SECURITY-SERVICE
+          uri: lb://SECURITY-SERVICE
+          predicates:
+            - Path=/api/security/**
+
 
 eureka:
   instance:
